<?xml version="1.0"?>
<package format="3">
  <name>tf_stresser</name>
  <version>1.0.0</version>
  <description>Package to test tf throughput</description>

  <maintainer email="dan@digilabs.io">Dan Rose</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
